--- a/package.json
+++ b/package.json
@@ -36,12 +36,19 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.1",
         "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-separator": "^1.1.1",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-toast": "^1.2.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.469.0",
+        "react-hook-form": "^7.54.2",
         "tailwind-merge": "^2.6.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.1"
     }
 }
