--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "fast-deep-equal": "^3.1.3",
     "lucide-react": "^0.469.0",
